--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Rishabh Madan <rishabh4499@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.5",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   }
 }
