--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
+    "socket.io": "^2.3.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   }
