--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "pratilipi-assignment",
+  "name": "read-count-system",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "author": "Rishabh Madan <rishabh4499@gmail.com>",
   "license": "ISC",
